[JBWS-2505] don't deploy AS integration layer